--- a/examples/counter/index.html
+++ b/examples/counter/index.html
@@ -3,16 +3,14 @@
 
 <head>
 	<meta charset="utf-8">
-	<script src="./reval.min.js"></script>
+	<script src="./reval.js"></script>
 </head>
 
 <body>
 	<script>
 		class Counter {
 			constructor() {
-				this.states = {
-					counter: 1
-				};
+				this.states = { counter: 1 };
 			}
 
 			render() {
