--- a/examples/shopping cart/index.html
+++ b/examples/shopping cart/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 	<script>
+		const { el, setState, mount, unmount } = Reval;
+		
 		class TodoList {
 			constructor() {
 				this.states = { list: [] };
