Make shopping cart example cool

--- a/examples/counter/index.html
+++ b/examples/counter/index.html
@@ -16,7 +16,7 @@
 			}
 
 			render() {
-				return el("h1", {}, [
+				return el("h1", { class: "Gucci" }, [
 					this.states.counter,
 
 					el("br"),
